service.yml
apiVersion: v1
kind: Service
metadata:
  name: knowledge
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: knowledge
